@startuml database_ucm

Entity admin {
    * id <<PK>>
    ---
    * email : varchar(100)
    * nama : varchar(100)
    * password : varchar(100)
}

Entity fakultas {
    * id <<PK>>
    ---
    * nama_fakultas : varchar(100)
}

Entity prodi {
    * id <<PK>>
    * fakultas_id <<FK>>
    ---
    * nama_prodi : varchar(100)
}

Entity dosen {
    * id <<PK>>
    ---
    * nama : varchar(100)
}

Entity mata_kuliah {
    * id <<PK>>
    ---
    * nama_matkul : varchar(100)
}

Entity jam_kampus {
    * id <<PK>>
    --
    * jam_mulai : time
    * jam_selesai : time
}

Entity gedung {
    * id <<PK>>
    ---
    * nama_gedung : varchar(100)
}

Entity ruangan {
    * id <<PK>>
    * gedung_id <<FK>>
    ---
    * nama_ruangan : varchar(100)
}

Entity jadwal {
    * id <<PK>>
    * id_dosen <<FK>>
    * id_prodi <<FK>>
    * id_ruangan <<FK>>
    * id_mata_kuliah <<FK>>
    ---
    * sks : integer
    * semester : integer
    * jam_mulai : time
    * jam_selesai : time
    * hari : enum(Senin, Selasa, Rabu, Kamis, Jumat, Sabtu)
    ---
    unique(id, id_dosen, id_prodi, id_mata_kuliah, id_ruangan, waktu, sks, semester, jam_mulai, jam_selesai, hari)
}

gedung ||--|{ ruangan : "Memiliki"
ruangan --|{ jadwal
dosen ||--|{jadwal
fakultas ||--|{ prodi
prodi }|--|{jadwal
mata_kuliah }|--|{ jadwal
@enduml